Fix links contrast

--- a/src/sidemenu/sidemenu.pcss
+++ b/src/sidemenu/sidemenu.pcss
@@ -18,7 +18,7 @@
   padding: 0.4rem 0 0.4rem 1rem;
   margin-top: 0.5rem;
   font-weight: bold;
-  color: #dd3a0a;
+  color: #3f526b;
 }
 
 .sidemenu_child {
